src/css/output.css
/* ... */
.fixed {
  position: fixed;
}

.relative {
  position: relative;
}

.bottom-4 {
  bottom: 1rem;
}

.left-4 {
  left: 1rem;
}

.right-4 {
  right: 1rem;
}

.top-4 {
  top: 1rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mt-4 {
  margin-top: 1rem;
}

.block {
  display: block;
}

.flex {
  display: flex;
}

.hidden {
  display: none;
}

.h-auto {
  height: auto;
}

.h-screen {
  height: 100vh;
}

.min-h-screen {
  min-height: 100vh;
}

.w-\[260px\] {
  width: 260px;
}

.w-full {
  width: 100%;
}

.w-\[160px\] {
  width: 160px;
}

.w-\[\] {
  width: ;
}

.w-\[344\] {
  width: 344;
}

.max-w-80 {
  max-width: 20rem;
}

.max-w-\[420px\] {
  max-width: 420px;
}

.max-w-\[\] {
  max-width: ;
}

.max-w-\[344\] {
  max-width: 344;
}

.max-w-\[344px\] {
  max-width: 344px;
}

.cursor-default {
  cursor: default;
}

.flex-col {
  flex-direction: column;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.border-none {
  border-style: none;
}

.bg-blue {
  --tw-bg-opacity: 1;
  background-color: rgb(29 63 187 / var(--tw-bg-opacity));
}

.bg-creamYellow {
  background-color: #f6e0a4;;
}

.bg-orange {
  --tw-bg-opacity: 1;
  background-color: rgb(255 101 26 / var(--tw-bg-opacity));
}

.bg-pink {
  --tw-bg-opacity: 1;
  background-color: rgb(255 96 140 / var(--tw-bg-opacity));
}

.bg-red {
  --tw-bg-opacity: 1;
  background-color: rgb(227 5 18 / var(--tw-bg-opacity));
}

.bg-teal {
  --tw-bg-opacity: 1;
  background-color: rgb(0 193 181 / var(--tw-bg-opacity));
}

.bg-transparent {
  background-color: transparent;
}

.bg-white {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.bg-yellow {
  --tw-bg-opacity: 1;
  background-color: rgb(255 190 0 / var(--tw-bg-opacity));
}

.p-2 {
  padding: 0.5rem;
}

.p-4 {
  padding: 1rem;
}

.text-center {
  text-align: center;
}

.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.text-\[14px\] {
  font-size: 14px;
}

.font-bold {
  font-weight: 700;
}

.font-extrabold {
  font-weight: 800;
}

.font-light {
  font-weight: 300;
}

.leading-5 {
  line-height: 1.25rem;
}

.leading-6 {
  line-height: 1.5rem;
}

.text-white {
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.text-pink {
  --tw-text-opacity: 1;
  color: rgb(255 96 140 / var(--tw-text-opacity));
}

.underline {
  text-decoration-line: underline;
}

.transition-colors {
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.duration-700 {
  transition-duration: 700ms;
}

.duration-500 {
  transition-duration: 500ms;
}

.hover\:underline:hover {
  text-decoration-line: underline;
}

.hover\:no-underline:hover {
  text-decoration-line: none;
}

.active\:font-bold:active {
  font-weight: 700;
}

@media (min-width: 640px) {
  .sm\:fixed {
    position: fixed;
  }

  .sm\:w-\[160px\] {
    width: 160px;
  }

  .sm\:w-\[\] {
    width: ;
  }

  .sm\:p-4 {
    padding: 1rem;
  }
}

@media (min-width: 768px) {
  .md\:fixed {
    position: fixed;
  }

  .md\:block {
    display: block;
  }

  .md\:w-\[260px\] {
    width: 260px;
  }

  .md\:w-\[160px\] {
    width: 160px;
  }

  .md\:max-w-\[420px\] {
    max-width: 420px;
  }

  .md\:p-0 {
    padding: 0px;
  }

  .md\:text-center {
    text-align: center;
  }

  .md\:text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .lg\:fixed {
    position: fixed;
  }

  .lg\:w-\[\] {
    width: ;
  }

  .lg\:w-\[260\] {
    width: 260;
  }

  .lg\:w-\[260px\] {
    width: 260px;
  }

  .lg\:text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

